# ec-generator-matrix

./: Cargo.toml  README.md
benches/: reed_solomon_bench.rs
src/: field.rs  lib.rs  main.rs  matrix.rs  reed_solomon.rs
