[package]
name = "ec_generator_matrix"
version = "0.1.0"
edition = "2024"

[dependencies]
ff = { version = "0.13", features = ["derive"] }
wee_alloc = "0.4.4"

smallvec = "1.11.2"     
rand = "0.9.1"  
criterion = "0.6.0"
reed-solomon-simd = "3.0.1"


[[bench]]
name = "reed_solomon_bench"
harness = false